# gecko-opencv

./: .gitignore  CMakeLists.txt  LICENSE  build-opencv.sh  setup-opencv.sh
dev/yaml/: CMakeLists.txt  yaml.cpp
example/watcher/: CMakeLists.txt  watcher.cpp
src/: camera.cpp  message.hpp  sub.cpp
